components/engine/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    app: engine
    app.kubernetes.io/component: engine
    app.kubernetes.io/instance: engine
    app.kubernetes.io/name: engine
    app.kubernetes.io/part-of: sasya-arogya
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: engine
  type: ClusterIP
